[package]
name = "bcp"
version = "0.4.0"
authors = ["Simon Heath <icefox@dreamquest.io>"]
edition = "2018"
description = "A convenient program for copying blocks of bytes within files."
license = "MIT/Apache-2.0"
repository = "https://github.com/icefoxen/bcp"
keywords = ["file", "cli", "terminal"]
categories = ["command-line-utilities", "filesystem"]
readme = "README.md"

[dependencies]
structopt = "0.2"
pbr = "1"
